--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sigaa Planner</title>
-    <link rel="stylesheet" href="TelaLogin.css">
+    <link rel="stylesheet" href="/view/TelaLogin.css">
 </head>
 <body>
     <div  id="page">
@@ -42,8 +42,8 @@
                              name="password"
                              placeholder="Digite sua senha"
                              required>
-                        <img onclick="togglePassword()" class="eye" src="/TelaLoginAssets/eye-off.svg" alt="">
-                        <img onclick="togglePassword()" class="eye hide" src="/TelaLoginAssets/eye.svg" alt=""> 
+                        <img onclick="togglePassword()" class="eye" src="/view/TelaLoginAssets/eye-off.svg" alt="">
+                        <img onclick="togglePassword()" class="eye hide" src="/view/TelaLoginAssets/eye.svg" alt=""> 
                     </div>
     
                     <button type="submit">Entrar</button>
